css/index.css
/* ... */
/* ------------------------------------------ */

.button__wrap {
    gap: 40px;
}

.btn {
    border: 1px solid var(--yellow);
    border-radius: 10px;
    padding: 13px 20px;
    height: 100%;
    font-weight: 400;
    font-size: 16px;
    color: var(--yellow);
}

.main {
    margin-bottom: 40px;
}



/* Секция СПЕЦПРЕДЛОЖЕНИЯ */
.special-offers {
    margin-bottom: 70px;
}

/* h1 */
.special-offers__title {
    margin-bottom: 20px;
    margin-left: 40px;
    margin-top: 0;
    font-weight: 400;
    font-size: 40px;
    color: var(--grey);
    height: 100%;
}


.special-offers__wrap {
    gap: 24px;
}

.left-block {
    flex-direction: column;
    gap: 24px;
}

.left-block__focus {
    position: relative;
}

.left-block__item {
    width: 573px;
    border-radius: 15px;
}

.first-card {
    background: linear-gradient(90deg, rgba(48, 64, 89, 0.84) -2.9%, rgba(53, 65, 83, 0) 65.7%), url(/assets/img/maldives-background.png);
    height: 100%;
    background-size: cover;
    background-position: center center;
    background-repeat: no-repeat;
}

.left-block__offers {
    flex-direction: column;
    margin: 40px 108px 40px 45px;
}

.left-block__title {
    font-weight: 700;
    font-size: 40px;
    color: var(--white);
    margin-bottom: 15px;
    font-family: 'MullerBold', sans-serif;
}

.left-block__price {
    font-weight: 400;
    font-size: 20px;
    color: var(--white);
    opacity: 0.8;
    margin-bottom: 47px;
}

.special-offers__link {
    color: var(--pale-yellow);
    align-items: center;
    gap: 5px;
}


/* Стилизация ссылок 'Спецпредложения' при использовании */

.special-offers__link:focus-visible {
    outline: none;
}

/* Фокус рамка карточек */
.special-offers__link::before {
    content: "";
    display: block;
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    outline: 2px solid transparent;
    outline-offset: 8px;
}

.special-offers__link:focus-visible::before {
    content: "";
    outline: 2px solid var(--yellow-phone);
    outline-offset: 8px;
}
/* ------------------------------------------ */

.special-offers__link:hover {
    color: var(--pale-yellow);
    align-items: center;
    gap: 11px;
}

.special-offers__link {
    transition: .3s;
}

.special-offers__link:active {
    color: var(--white);
    outline: none;
    gap: 5px;
}
/* ------------------------------------------ */


.second-card {
    background: linear-gradient(90deg, rgba(48, 64, 89, 0.84) -2.9%, rgba(53, 65, 83, 0) 65.7%), url(/assets/img/background-island-crete.png);
    height: 100%;
    background-size: cover;
    background-position: center center;
    background-repeat: no-repeat;
}

.right-block__item {
    flex-direction: column;
    justify-content: flex-end;
    width: 573px;
    height: 100%;
    background-image: url(/assets/img/luxury-room-background.png);
    border-radius: 15px;
    height: 100%;
}

.right-block__offers {
    flex-direction: column;
    justify-content: flex-end;
    margin-left: 45px;
    margin-bottom: 40px;
}

.right-block__title {
    font-weight: 700;
    font-size: 40px;
    color: var(--white);
    margin-bottom: 15px;
    font-family: 'MullerBold', sans-serif;
    font-size: 60px;
    margin-right: 229px;
}

.right-block__price {
    font-weight: 400;
    font-size: 20px;
    color: var(--white);
    opacity: 0.8;
    margin-bottom: 47px;
}


/* Секция О НАС */
.about-us__text {
    line-height: 200%;
    color: var(--black);
    height: 100%;
    width: 888px;
    margin-bottom: 70px;
}



/* Секция УСЛУГИ */
.services__list {
    flex-wrap: wrap;
    margin: 0;
    padding: 0;
    list-style: none;
    gap: 24px;
    margin-bottom: 70px;
}

.services__item {
    position: relative;
}

.services__prew {
    border-radius: 15px 15px 0 0;
    width: 573px;
    height: 165px;
}

.services__body {
    border-radius: 0 0 15px 15px;
    width: 573px;
    padding-top: 26px;
    padding-right: 26px;
    padding-bottom: 45px;
    padding-left: 45px;
    background-color: var(--white);
}

.service__link {
    font-weight: 500;
    font-size: 20px;
    line-height: 200%;
    color: var(--yellow-phone);
    font-family: 'MullerMedium', sans-serif;
    align-items: center;
    gap: 5px;
}


/* Стилизация ссылок 'УСЛУГИ' при использовании */
.service__link:focus-visible {
    outline: none;
}

/* Фокус рамка карточек */
.service__link::before {
    content: "";
    display: block;
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    outline: 2px solid transparent;
    outline-offset: 8px;
}

.service__link:focus-visible::before {
    content: "";
    outline: 2px solid var(--yellow-phone);
    outline-offset: 8px;
}
/* ------------------------------------------ */


.service__link:hover, .service__link:hover svg path {
    color: var(--pale-yellow);
    stroke: var(--pale-yellow);
    align-items: center;
    gap: 11px;
}

.service__link {
    transition: .3s;
}

.service__link:active {
    color: var(--yellow-active);
    outline: none;
    gap: 5px;
}
/* ------------------------------------------ */


.services__text {
    line-height: 200%;
    color: var(--black);
}


/* 1 карточка */
.one-prew {
    background-image: url(/assets/img/exclusive-service.svg);
}

/* 2 карточка */
.two-prew {
    background-image: url(/assets/img/rent-of-banquet-halls.svg);
}

/* 3 карточка */
.three-prew {
    background-image: url(/assets/img/saunas-baths-fitness.svg);
}

/* 4 карточка */
.four-prew {
    background-image: url(/assets/img/guarded-car-parks.svg);
}



/* Секция ПРЕИМУЩЕСТВА */
.advantages {
    margin-bottom: 70px;
}

.advantages__list {
    list-style: none;
    margin: 0;
    padding: 0;
    gap: 22px;
    flex-wrap: wrap;
}

.advantages__item {
    border-radius: 15px;
    width: 276px;
    height: 100%;
    background-color: var(--white);
    padding-bottom: 32px;
}

.advantages__background {
    margin-top: 40px;
    margin-bottom: 10px;
    margin-left: 45px;
}
/* ... */

